add hover interaction for home links

--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
@@ -48,10 +48,14 @@ header{
     }
 
     &__links-desktop{
-      @apply hidden lg:flex justify-between text-center divide-x-2 divide-gray-3 ml-auto [&>*]:px-8 first:[&>*]:pl-0 last:[&>*]:pr-0;
+      @apply hidden lg:flex items-center justify-between text-center divide-x-2 divide-gray-3 ml-auto [&>*]:px-6 first:[&>*]:pl-0 last:[&>*]:pr-0;
 
       &__item{
-        @apply flex flex-col items-center text-secondary;
+        @apply flex flex-col items-center text-secondary px-2 py-1 rounded hover:underline hover:bg-background;
+
+        &-wrapper{
+          @apply flex gap-x-6;
+        }
       }
 
       svg{
@@ -91,7 +95,7 @@ header{
       }
 
       &-trigger{
-        @apply flex flex-col items-center text-secondary relative;
+        @apply flex flex-col items-center text-secondary relative px-2 py-1;
 
         &__notification{
           @apply w-2.5 h-2.5 rounded-full block absolute -top-0.5 right-0 bg-primary;
