--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
@@ -94,7 +94,7 @@ header{
         @apply relative cursor-pointer;
       }
 
-      &__notification{
+      &-notification{
         @apply w-2.5 h-2.5 rounded-full bg-primary;
       }
 
