Adjust the editor toolbar height

--- a/decidim-core/app/packs/stylesheets/decidim/_editor.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_editor.scss
@@ -13,7 +13,7 @@
 
   .editor-toolbar{
     border-bottom: 1px solid #ccc;
-    padding: 10px;
+    padding: 5px 10px;
 
     .editor-toolbar-group{
       display: inline-block;
