Implement custom video embeds
Allowing embedding of other videos than only YouTube, e.g. Vimeo.
Also adds support for general iframe embedding.

--- a/decidim-core/app/packs/stylesheets/decidim/_editor.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_editor.scss
@@ -73,6 +73,10 @@
       li p{
         margin-bottom: 0;
       }
+
+      [data-video-embed] iframe{
+        pointer-events: none;
+      }
     }
   }
 }
