Change the indent to class based instead of hard coded styles

--- a/decidim-core/app/packs/stylesheets/decidim/_editor.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_editor.scss
@@ -116,6 +116,15 @@
   }
 }
 
+.rich-text-display,
+.editor-container .editor-input .ProseMirror{
+  @for $i from 1 through 10{
+    .editor-indent-#{$i}{
+      margin-left: 1rem * $i;
+    }
+  }
+}
+
 .ql-editor-display{
   ul,
   ol{
