--- a/decidim-core/app/packs/stylesheets/decidim/_editor.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_editor.scss
@@ -69,38 +69,25 @@
       min-height: 100%;
       outline: 0;
 
-      [data-video-embed] iframe{
-        pointer-events: none;
+      [data-video-embed]{
+        margin-bottom: $paragraph-margin-bottom;
+
+        iframe{
+          pointer-events: none;
+        }
       }
     }
   }
 }
 
 .rich-text-display{
-  // vv Legacy vv
-  .ql-video{
-    max-width: 600px;
-    width: 100%;
-    height: 450px;
-    max-height: 70vh;
-    margin: 40px auto;
-    display: block;
-  }
-
-  .ql-toolbar .ql-video{
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-
-  .ql-reset-decidim{
-    display: inline;
-    padding: 0;
-    white-space: inherit;
-  }
-
   ul,
   ol{
     margin-bottom: $paragraph-margin-bottom;
+  }
+
+  .editor-content-videoEmbed{
+    margin: 40px auto;
   }
 }
 
@@ -110,6 +97,30 @@
   // within the content model.
   li p{
     margin-bottom: 0;
+  }
+
+  .editor-content-image{
+    margin-bottom: $paragraph-margin-bottom;
+  }
+
+  .editor-content-videoEmbed{
+    max-width: 600px;
+
+    > div{
+      position: relative;
+      height: 0;
+      padding-bottom: 56.25%; /* 16:9 */
+      width: 100%;
+    }
+
+    iframe{
+      position: absolute;
+      display: block;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   @for $i from 1 through 10{
