--- a/decidim-participatory_processes/app/cells/decidim/participatory_processes/process_g/show.erb
+++ b/decidim-participatory_processes/app/cells/decidim/participatory_processes/process_g/show.erb
@@ -14,7 +14,8 @@
       <div>
         <%
           # REDESIGN_PENDING: Decimal number between 0-1. Higher when closer to date
-          value = rand(1..100).to_f / 100 %>
+          value = rand(1..100).to_f / 100
+        %>
         <div class="card__grid-loader" style="--value:<%= value %>;"></div>
         queda un mes
       </div>
