--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
@@ -32,7 +32,7 @@ header{
     }
 
     &__search{
-      @apply hidden md:block md:w-2/5 lg:w-1/6;
+      @apply hidden md:block md:w-2/5 lg:w-1/4 xl:w-1/6;
 
       span{
         @apply block relative rounded text-md bg-background;
@@ -48,7 +48,7 @@ header{
     }
 
     &__links-desktop{
-      @apply hidden lg:flex items-center justify-between text-center divide-x-2 divide-gray-3 ml-auto [&>*]:px-6 first:[&>*]:pl-0 last:[&>*]:pr-0;
+      @apply hidden xl:flex items-center justify-between text-center divide-x-2 divide-gray-3 ml-auto [&>*]:px-6 first:[&>*]:pl-0 last:[&>*]:pr-0;
 
       &__item{
         @apply flex flex-col items-center text-secondary px-2 py-1 rounded hover:underline hover:bg-background;
@@ -83,7 +83,7 @@ header{
       }
 
       &__dropdown{
-        @apply absolute top-full left-0 z-10;
+        @apply absolute top-full left-0 z-20;
       }
     }
 
