Add dynamic breadcrumb root menu elements

--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_main_dropdown.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_main_dropdown.html.erb
@@ -3,9 +3,7 @@
     <div class="w-full md:w-1/2">
       <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_main_dropdown_top_left" %>
     </div>
-    <ul class="w-full md:w-1/2 mt-8 md:mt-0 divide-y divide-gray-3 grid md:grid-cols-2 gap-x-6 text-secondary">
-      <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_links" %>
-    </ul>
+    <%= breadcrumb_root_menu.render %>
   </div>
   <div class="flex flex-col md:flex-row justify-between p-4 md:p-8 gap-x-8">
     <div class="w-full md:w-1/2">
