--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_main_dropdown.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_main_dropdown.html.erb
@@ -6,6 +6,7 @@
     <%= breadcrumb_root_menu.render %>
   </div>
   <div class="flex flex-col md:flex-row justify-between p-4 md:p-8 gap-x-8">
+  <%# REDESIGN_PENDING - This element should use a cell and define a criteria to select a single featured element %>
     <div class="w-full md:w-1/2">
       <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_main_dropdown_bottom_left" %>
     </div>
