--- a/decidim-core/app/cells/decidim/content_blocks/menu_breadcrumb_last_activity/show.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/menu_breadcrumb_last_activity/show.erb
@@ -6,4 +6,6 @@
         author_options: { layout: :avatar }
       ) %>
 </div>
-<%= arrow_link t("decidim.content_blocks.last_activity.name"), "", class: "mt-4 text-secondary" %>
+<%= link_to last_activities_path, class: "mt-4 button button__text-secondary" do %>
+  <span><%= t("decidim.content_blocks.last_activity.name") %></span><%= icon "arrow-right-line" %>
+<% end %>
