Fix key used to get url in process_nav_item partial

--- a/decidim-participatory_processes/app/views/layouts/decidim/_process_nav_item.html.erb
+++ b/decidim-participatory_processes/app/views/layouts/decidim/_process_nav_item.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <%= link_to item[:path], class: "process__nav-item" do %>
+  <%= link_to item[:url], class: "process__nav-item" do %>
     <%= item[:name] %>
     <%= icon "arrow-right-line" %>
   <% end %>
