--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu.html.erb
@@ -6,7 +6,7 @@
       <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_desktop" %>
     </div>
     <div class="hidden lg:flex justify-between items-center gap-6">
-      <%= render partial: "layouts/decidim/header/redesigned_menu_buttons" %>
+      <%= content_for :participatory_space_actions %>
     </div>
 
     <%# secondary dropdown mobile-tablet %>
