--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_items.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_items.html.erb
@@ -1,27 +1,22 @@
-<% @breadcrumb_items ||= [["Process", false], ["Imaginem el nou ecobarri de Ca n' Ametller", true], ["Sobre el procés", false]] %>
-
-<% @breadcrumb_items.each_with_index do |item, i| %>
+<% breadcrumb_items.each_with_index do |item, i| %>
+  <% item_label = decidim_html_escape(translated_attribute(item[:label])) %>
   <span>/</span>
-
-  <% is_active = item[1] # item[0] could also be "active" %>
-  <% has_dropdown = item[1] # Not all items have a secondary dropdown %>
-
-  <% if has_dropdown %>
+  <% if item[:dropdown_cell].present? %>
     <details class="relative">
       <!-- REDESIGN_PENDING: the summary block styles could be simplified using backdrop-filter (i.e. tailwind: backdrop-brightness-75),
         but still incompatible with firefox: https://caniuse.com/css-backdrop-filter -->
       <summary id="secondary-dropdown-summary"
-        class="flex rounded overflow-hidden px-2 py-1 cursor-pointer relative group <%= "font-bold" if is_active %>"
+        class="flex rounded overflow-hidden px-2 py-1 cursor-pointer relative group <%= "font-bold" if item[:active] %>"
         aria-controls="secondary-dropdown">
         <span class="opacity-0 group-hover:opacity-100 transition z-0 absolute top-0 left-0 w-full h-full brightness-75 bg-primary"></span>
-        <span class="relative z-10"><%= item[0] %></span>
+        <span class="relative z-10"><%= item_label %></span>
       </summary>
       <div id="secondary-dropdown" aria-labelledby="secondary-dropdown-summary"
         class="absolute top-[calc(100%+1rem)] left-0 z-20">
-        <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_secondary_dropdown" %>
+        <%= cell item[:dropdown_cell], item[:resource] %>
       </div>
     </details>
   <% else %>
-    <span class="cursor-pointer <%= "font-bold" if is_active %>"><%= item[0] %></span>
+    <span class="cursor-pointer <%= "font-bold" if item[:active] %>"><%= item_label %></span>
   <% end %>
 <% end %>
