--- a/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
@@ -55,6 +55,7 @@
   @import "stylesheets/decidim/redesigned_photos.scss";
   @import "stylesheets/decidim/redesigned_cards.scss";
   @import "stylesheets/decidim/redesigned_endorsers_list.scss";
+  @import "stylesheets/decidim/redesigned_tooltip.scss";
 }
 
 // On the other hand, the following styles match with specific routes
