Refactor decidim_editor to its own JS pack for CSS compatibility
In order to utilize the Tailwind CSS based editor CSS, we include
it in the JS and pack the editor as its own includable asset.

--- a/decidim-admin/app/views/layouts/decidim/admin/_header.html.erb
+++ b/decidim-admin/app/views/layouts/decidim/admin/_header.html.erb
@@ -2,5 +2,6 @@
 <%= csrf_meta_tags %>
 <%= stylesheet_pack_tag "decidim_admin", media: "all" %>
 <%= javascript_pack_tag "decidim_admin", defer: false %>
+<%= javascript_pack_tag "decidim_editor", defer: false %>
 <%= organization_colors %>
 <%= snippets.display(:head) %>
