--- a/decidim-core/app/views/layouts/decidim/_redesigned_decidim_javascript.html.erb
+++ b/decidim-core/app/views/layouts/decidim/_redesigned_decidim_javascript.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_pack_tag "redesigned_decidim_core", defer: false %>
+<%= javascript_pack_tag "decidim_editor", defer: false %>
 <%= render partial: "layouts/decidim/redesigned_js_configuration" %>
 
 <%= yield :js_content %>
