--- a/decidim-system/app/views/layouts/decidim/system/_header.html.erb
+++ b/decidim-system/app/views/layouts/decidim/system/_header.html.erb
@@ -2,3 +2,4 @@
 <%= csrf_meta_tags %>
 <%= stylesheet_pack_tag "decidim_system", media: "all" %>
 <%= javascript_pack_tag "decidim_system", defer: false %>
+<%= javascript_pack_tag "decidim_editor", defer: false %>
