--- a/decidim-core/app/views/layouts/decidim/_decidim_javascript.html.erb
+++ b/decidim-core/app/views/layouts/decidim/_decidim_javascript.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_pack_tag "decidim_core", defer: false %>
+<%= javascript_pack_tag "decidim_editor", defer: false %>
 <% if Decidim.service_worker_enabled %>
   <%= javascript_pack_tag "decidim_sw", defer: false %>
 <% end %>
