Add entrypoint for the editor CSS and include it in the head

--- a/decidim-admin/app/views/layouts/decidim/admin/_header.html.erb
+++ b/decidim-admin/app/views/layouts/decidim/admin/_header.html.erb
@@ -1,6 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <%= csrf_meta_tags %>
 <%= stylesheet_pack_tag "decidim_admin", media: "all" %>
+<%= stylesheet_pack_tag "decidim_editor", media: "all" %>
 <%= javascript_pack_tag "decidim_admin", defer: false %>
 <%= javascript_pack_tag "decidim_editor", defer: false %>
 <%= organization_colors %>
