--- a/decidim-core/app/views/layouts/decidim/_head.html.erb
+++ b/decidim-core/app/views/layouts/decidim/_head.html.erb
@@ -27,6 +27,7 @@
 <link rel="manifest" href="/manifest.webmanifest">
 
 <%= stylesheet_pack_tag "decidim_core", media: "all" %>
+<%= stylesheet_pack_tag "decidim_editor", media: "all" %>
 <%= invisible_captcha_styles %>
 <%= organization_colors %>
 
