--- a/decidim-core/app/views/layouts/decidim/_redesigned_head.html.erb
+++ b/decidim-core/app/views/layouts/decidim/_redesigned_head.html.erb
@@ -27,6 +27,7 @@
 <link rel="manifest" href="/manifest.webmanifest">
 
 <%= stylesheet_pack_tag "redesigned_decidim_core", media: "all" %>
+<%= stylesheet_pack_tag "decidim_editor", media: "all" %>
 <%= yield :css_content %>
 
 <%= invisible_captcha_styles %>
