--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_items.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_items.html.erb
@@ -2,21 +2,20 @@
   <% item_label = decidim_html_escape(translated_attribute(item[:label])) %>
   <span>/</span>
   <% if item[:dropdown_cell].present? %>
-    <details class="relative">
-      <!-- REDESIGN_PENDING: the summary block styles could be simplified using backdrop-filter (i.e. tailwind: backdrop-brightness-75),
-        but still incompatible with firefox: https://caniuse.com/css-backdrop-filter -->
-      <summary id="secondary-dropdown-summary"
-        class="flex rounded overflow-hidden px-2 py-1 cursor-pointer relative group <%= "font-bold" if item[:active] %>"
-        aria-controls="secondary-dropdown">
-        <span class="opacity-0 group-hover:opacity-100 transition z-0 absolute top-0 left-0 w-full h-full brightness-75 bg-primary"></span>
-        <span class="relative z-10"><%= item_label %></span>
-      </summary>
-      <div id="secondary-dropdown" aria-labelledby="secondary-dropdown-summary"
-        class="absolute top-[calc(100%+1rem)] left-0 z-20">
+    <div class="relative">
+      <div id="secondary-dropdown-summary"
+        class="menu-bar__breadcrumb-desktop__dropdown-trigger<%= " font-bold" if item[:active] %>"
+        data-controls="secondary-dropdown-panel-<%= i %>">
+        <%= item_label %>
+      </div>
+      <div id="secondary-dropdown-panel-<%= i %>" class="menu-bar__breadcrumb-desktop__dropdown-content-secondary" aria-hidden="true">
         <%= cell item[:dropdown_cell], item[:resource] %>
       </div>
-    </details>
+    </div>
   <% else %>
-    <span class="cursor-pointer <%= "font-bold" if item[:active] %>"><%= link_to_if(item[:url].present?, item_label, item[:url]) %></span>
+    <%= link_to_if(item[:url].present?, item_label, item[:url], class:"menu-bar__breadcrumb-desktop__dropdown-trigger#{' font-bold' if item[:active]}") do %>
+      <%# alternative template %>
+      <%= content_tag :span, item_label, class:"menu-bar__breadcrumb-desktop__dropdown-trigger#{' font-bold' if item[:active]}", tabindex: "0" %>
+    <% end %>
   <% end %>
 <% end %>
