--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_main_dropdown.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_main_dropdown.html.erb
@@ -1,16 +1,16 @@
-<div class="bg-white divide-y divide-gray-3 rounded-b shadow-lg text-black w-full lg:w-[1200px]">
-  <div class="flex flex-col md:flex-row justify-between p-4 md:p-8 gap-x-8">
-    <div class="w-full md:w-1/2">
+<div id="breadcrumb-main-dropdown" class="menu-bar__main-dropdown">
+  <div class="menu-bar__main-dropdown__top">
+    <div class="menu-bar__main-dropdown__top-left">
       <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_main_dropdown_top_left" %>
     </div>
     <%= breadcrumb_root_menu.render %>
   </div>
-  <div class="flex flex-col md:flex-row justify-between p-4 md:p-8 gap-x-8">
+  <div class="menu-bar__main-dropdown__bottom">
   <%# REDESIGN_PENDING - This element should use a cell and define a criteria to select a single featured element %>
-    <div class="w-full md:w-1/2">
+    <div class="menu-bar__main-dropdown__bottom-left">
       <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_main_dropdown_bottom_left" %>
     </div>
-    <div class="hidden md:block md:w-1/2">
+    <div class="menu-bar__main-dropdown__bottom-right">
       <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_last_activity" %>
     </div>
   </div>
