--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_main_dropdown_top_left.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_main_dropdown_top_left.html.erb
@@ -1,2 +1,2 @@
-<h3 class="h4 md:h3"><%= t("decidim.pages.home.footer_sub_hero.footer_sub_hero_headline", organization: current_organization.name) %></h3>
-<p class="text-md md:text-lg text-gray-2 mt-5"><%== t("decidim.pages.home.footer_sub_hero.footer_sub_hero_body") %></p>
+<h3 class="menu-bar__main-dropdown__title"><%= t("decidim.pages.home.footer_sub_hero.footer_sub_hero_headline", organization: current_organization.name) %></h3>
+<p class="menu-bar__main-dropdown__subtitle"><%== t("decidim.pages.home.footer_sub_hero.footer_sub_hero_body") %></p>
